[project]
name = "po_processer"
version = "0.1.0"
description = "PO_Processer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]>=1.11.0",
    "pdfminer.six>=20221105",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
]
 
[project.scripts]
po_processer    = "po_processer.main:run"
run_crew        = "po_processer.main:run"
train           = "po_processer.main:train"
replay          = "po_processer.main:replay"
test            = "po_processer.main:test"
run_with_trigger = "po_processer.main:run_with_trigger"
 
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[tool.crewai]
type = "crew"
 
[tool.uv]
required-environments = [
"sys_platform == 'win32' and platform_machine == 'AMD64'",
]
