[project]
name = "po_processer"
version = "0.1.0"
description = "PO processor — extract spare parts purchase orders to Excel"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0.0",
    "pdfplumber>=0.10.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
po_processer = "po_processer.main:run"
run_po = "po_processer.main:run"
train = "po_processer.main:train"
run_with_trigger = "po_processer.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
